grammar.js
    sourceFile: $ => choice(
      seq(
        'package', $.packageIde, ';', 
          repeat($.exportDecl),
          repeat($.importDecl),
          repeat($.packageStmt),
        'endpackage', optseq(':', $.packageIde)
      ),
      // NOTE: Contrary to spec, the actual bsc implementation allows files 
      //       without a package declaration.
      seq(
        repeat($.exportDecl),
        repeat($.importDecl),
        repeat($.packageStmt),
      ),
    ),

    // NOTE: Ignore compiler directives for now. Assume pre-processed source.
    //       The directives use C syntax, so any C pre-processor works on these.
    //       Alternatively, we could use preprocessor rules from tree-sitter-c
    // compilerDirective: $ => choice(
    //   seq("'include", '"', $.filename, '"'),
    //   seq("'include", '<', $.filename, '>'),
    //   seq("'include", $.macroInvocation),
    //   seq("'line", $.decDigits, '"', $.filename, '"', $.level),
    //   seq("'define", $.macroName, optseq('(', $.macroFormals, ')'), $.macroText),
    // ),
    // level: $ => choice('0', '1', '2'),

    importDecl: $ => seq('import', $.importItem, repeatseq(',', $.importItem), ';'),
    importItem: $ => seq($.packageIde, '::', '*'),

    packageStmt: $ => choice(
      $.moduleDef,
      $.interfaceDecl, 
      $.typeDef, 
      $.varDecl, 
      // NOTE: Only the below "varAssign" rule choice is valid at packageStmt scope,
      //       contrary to the spec.
      prec.left(seq($.lValue, '=', $.expression, ';')),
      $.functionDef,
      $.typeclassDef,
      $.typeclassInstanceDef,
      // TODO: Add externModuleImport, sec. 15 from BSV lang ref
      // $.externModuleImport, 
      // NOTE: missing in the spec:
      $.externCImport, 
    ),

    //  NOTE: BSV lang ref guide requires upper case; 
    //  the actual bsc implementation does not care...
    packageIde: $ => $.identifier, 

    // ================================================================
    // sec 4 Types

    type: $ => choice(
      $.typePrimary, 
      prec.left(seq(
        $.typePrimary, '(', $.type, repeatseq(',', $.type), ')'
      ))
    ),

    typePrimary: $ => choice(
      seq($.typeIde, optseq('#', '(', $.type, repeatseq(',', $.type), ')')),
      $.typeNat,
      seq('bit', '[', $.typeNat, ':', $.typeNat, ']')
    ),

    // NOTE: To quote from BSV reference manual: Data types in BSV are case 
    // sensitive. The first character of a type is almost always uppercase, the
    // only exceptions being the types int and bit for compatibility with Verilog.
    typeIde: $ => $.identifier,
    typeNat: $ => $.decDigits,

    // ================================================================
    // sec 5.2 Interface declaration

    typeDefType: $ => seq(
      $.typeIde, optional($.typeFormals)
    ),
    moduleDef: $ => seq(
      optional($.attributeInstances), 
      $.moduleProto,
        repeat($.moduleStmt), 
      'endmodule', optseq(':', $.identifier)
    ),

    moduleProto: $ => seq(
      'module', optseq('[', $.type, ']'), $.identifier,
      optional($.moduleFormalParams), '(', optional($.moduleFormalArgs), ')',
      optional($.provisos), ';'
    ),
    moduleFormalArgs: $ => choice(
      seq(optional($.attributeInstances), $.type),
      seq(optional($.attributeInstances), $.type, $.identifier,
          repeatseq(',', optional($.attributeInstances), $.type, $.identifier))
    ),

    moduleStmt: $ => choice(
      $.moduleInst,
      $.methodDef,
      $.subinterfaceDef,
      $.rule, 
      $.varDo,
      $.varDeclDo,
      // NOTE: The spec {module, function, action, actionValue, etc}Stmt rules 
      //       are missing semicolons in some places.
      prec.left(seq($.functionCall, ';')),
      $.systemTaskStmt,
      prec.left(seq('(', $.expression, ')', ';')),
      $.returnStmt,
      $.varDecl,
      $.varAssign,
      $.functionDef,
      $.moduleDef,
      ctxtBeginEndStmt($, $.moduleStmt),
      ctxtIf($, $.moduleStmt),
      ctxtCase($, $.moduleStmt),
      ctxtFor($, $.moduleStmt),
      ctxtWhile($, $.moduleStmt),
    ),


    // ============================================================
    // sec 5.4 Module and interface instantiation

    // sec 5.4.1 Short form instantiation
    rule: $ => prec.left(seq(
      optional($.attributeInstances), 
      'rule', $.identifier, optional($.ruleCond), ';', 
        repeat($.actionStmt), // rule body
      'endrule', optional(seq(':', $.identifier))
    )),
    condPredicate: $ => prec.left(seq(
      $.exprOrCondPattern, repeatseq('&&&', $.exprOrCondPattern)
    )),
    exprOrCondPattern: $ => choice(
      $.expression,
      prec.left(seq($.expression, 'matches', $.pattern)),
      // NOTE: Contrary to spec, a pattern and an expression can be in parens.
      prec.left(seq($.expression, 'matches', '(', $.pattern, ')')),
      prec.left(seq('(', $.expression, ')')),
    ),

    // ================================================================
    // Typedefs

    typeDef: $ => choice(
      $.typedefSynonym, 
      $.typedefEnum, 
      $.typedefStruct,
      $.typedefTaggedUnion
    ),

    typedefStruct: $ => prec.left(seq(
      'typedef', 'struct', '{', 
        repeat($.structMember), 
      '}', $.typeDefType, optional($.derives), ';'
    )),
    structMember: $ => choice(
      prec.left(seq($.type, $.identifier, ';')),
      prec.left(seq($.subUnion, $.identifier, ';'))
    ),
    typeclassIde: $ => $.Identifier,
    derives: $ => prec.left(seq(
      'deriving', '(', $.typeclassIde, repeat(seq(',', $.typeclassIde)), ')'
    )),

    // ================================================================
    // sec 9 Variable declarations and statements

    varDecl: $ => choice(
      prec.left(seq($.type, $.varInit, repeatseq(',', $.varInit), ';')),
      prec.left(seq('let', $.identifier, '=', $.expression, ';')),
      // NOTE: The spec is missing the below rule to allow declarations like:
      //       Reg#(Maybe#(t)) data();
      prec.left(seq($.type, $.identifier, 
        '(', 
          optseq($.expression, repeatseq(',', $.expression)),
        ')', ';')
      ),
    ),

    varInit: $ => prec.left(seq(
      $.identifier, optional($.arrayDims), optseq('=', $.expression)
    )),
    varAssign: $ => choice(
      prec.left(seq($.lValue, '=', $.expression, ';')),
      // if expression is the value returned by an actionvalue method:
      prec.left(seq('let', $.identifier, '<-', $.expression, ';')),
      // sec 11.4 pattern matching
      prec.left(seq('match', $.pattern, '=', $.expression, ';'))
    ),
    lValue: $ => choice(
      $.identifier, 
      prec.right(seq($.lValue, '.', $.identifier)),
      prec.right(seq($.lValue, '[', $.expression, ']')),
      prec.right(seq($.lValue, '[', $.expression, ':', $.expression, ']'))
    ),
    varDeclDo: $ => prec.left(seq($.type, $.identifier, '<-', $.expression, ';')),
    regWrite: $ => choice(
      // NOTE: Spec is missing semicolon. regWrite could be without one, 
      //       relying on super rules to add one, but this is not the approach
      //       taken with other rules in the spec, e.g., varDo.
      prec.left(seq($.lValue, '<=', $.expression, ';')),
      prec.left(seq('(', $.expression, ')', '<=', $.expression, ';')),
      prec.left(seq($.lValue, $.arrayIndexes, '<=', $.expression, ';')),
      prec.left(seq($.lValue, '[', $.expression, ':', $.expression, ']', '<=', $.expression, ';')),
      prec.left(seq($.lValue, '.', $.identifier, '<=', $.expression, ';')),
    ),
    functionDef: $ => prec.left(seq(
      optional($.attributeInstances), 
      // NOTE: We removed the semicolon from the functionProto rule
      //       to allow functionProtos to appear in method/function arguments.
      $.functionProto, ';',
        $.functionBody, 
      'endfunction', optseq(':', $.identifier)
    )),

    // NOTE: Contrary to the spec, our rule does not have a semicolon, requiring
    //       any super rules to handle them. This is to enable function prototypes
    //       to appear in function/method arguments.
    //       Also, we have optional parens, contrary to spec?
    functionProto: $ => prec.left(seq(
      'function', $.type, $.identifier,
          optseq('(', optional($.functionFormals), ')'), 
          optional($.provisos), optional($.expression)
    )),
    functionFormals: $ => prec.left(seq(
      $.functionFormal, repeatseq(',', $.functionFormal)
    )),
    functionFormal: $ => choice(
      // NOTE: A function can take another function as parameter.
      prec.left(seq($.type, $.identifier)),
      $.functionProto
    ),

    functionBody: $ => choice(
      $.actionBlock,
      $.actionValueBlock,
      // NOTE: Spec allows repeat0, but there is no way to have an empty body?
      repeat1($.functionBodyStmt),
    ),
    functionBodyStmt: $ => choice(
      $.returnStmt, 
      $.varDecl, 
      $.varAssign, 
      $.functionDef,
      $.moduleDef, 
      ctxtBeginEndStmt($, $.functionBodyStmt),
      ctxtIf($, $.functionBodyStmt),
      ctxtCase($, $.functionBodyStmt),
      ctxtFor($, $.functionBodyStmt),
      ctxtWhile($, $.functionBodyStmt),
    ),
    expression: $ => choice(
      $.condExpr, 
      $.operatorExpr, 
      $.exprPrimary
    ),

    condExpr: $ => prec.right(seq(
      $.condPredicate, '?', $.expression, ':', $.expression
    )),

    operatorExpr: $ => choice(
      prec.right(seq($.unop, $.expression)),
      prec.left(seq($.expression, $.binop, $.expression))
    ),

    // The following operators are in order of decreasing precedence
    unop: $ => token(choice(
      prec(90, '+'),
      prec(90, '-'),
      prec(90, '!'),
      prec(90, '~'),
      prec(89, '&'),
      prec(88, '~&'),
      prec(87, '|'),
      prec(86, '~|'),
      prec(85, '^'),
      prec(84, '^~'),
      prec(84, '~^'),
    )),
    binop: $ => token(choice(
      // NOTE: The spec is missing the power binop.
      prec(83, '**'),
      prec(82, '*'),
      prec(82, '/'),
      prec(82, '%'),
      prec(81, '+'),
      prec(81, '-'),
      prec(80, '<<'),
      prec(80, '>>'),
      prec(79, '<='),
      prec(79, '>='),
      prec(79, '<'),
      prec(79, '>'),
      prec(78, '=='),
      prec(78, '!='),
      prec(77, '&'),
      prec(76, '^'),
      prec(75, '^~'),
      prec(75, '~^'),
      prec(74, '|'),
      prec(73, '&&'),
      prec(72, '||'),
    )),

    exprPrimary: $ => choice(
      $.identifier,
      $.intLiteral,
      $.realLiteral,
      $.stringLiteral,
      $.systemFunctionCall,
      field('dont_care', '?'),
      prec.left(seq('(', $.expression, ')')),
      seq('valueOf', '(', $.type, ')'),
      seq('valueof', '(', $.type, ')'),
      $.bitConcat,
      $.bitSelect,
      $.beginEndExpr,
      $.actionBlock,
      $.actionValueBlock,
      $.functionCall,
      $.methodCall,
      $.typeAssertion,
      $.structExpr,
      prec.left(seq($.exprPrimary, '.', $.identifier)),
      $.taggedUnionExpr,
      $.interfaceExpr,
      $.rulesExpr,
      $.seqFsmStmt,
      $.parFsmStmt,
    ),

    actionBlock: $ => prec.left(seq(
      'action', optseq(':', $.identifier),
        repeat($.actionStmt), 
      'endaction', optseq(':', $.identifier)
    )),
    actionStmt: $ => choice(
      $.regWrite,
      $.varDo,
      $.varDeclDo,
      prec.left(seq($.functionCall, ';')),
      prec.left(seq($.methodCall, ';')),
      $.systemTaskStmt,
      prec.left(seq('(', $.expression, ')', ';')),
      $.actionBlock,
      $.varDecl,
      $.varAssign,
      $.functionDef,
      $.methodDef,
      // NOTE: The bsc implementation provides a "noAction" statement. 
      field('noAction', 'noAction'),
      ctxtBeginEndStmt($, $.actionStmt),
      ctxtIf($, $.actionStmt),
      ctxtCase($, $.actionStmt),
      ctxtFor($, $.actionStmt),
      ctxtWhile($, $.actionStmt),
    ),

    functionCall: $ => prec.left(40, seq(
      $.exprPrimary, 
      '(', 
        optseq($.expression, repeatseq(',', $.expression)),
      ')'
    )),
    // We keep the parens as optional in method calls, as the GLR can recover from
    // the left recursion due to the ".identifier" part that follows.
    methodCall: $ => prec.left(50, seq(
      $.exprPrimary, '.', $.identifier,
      optseq('(', 
        optseq($.expression, repeatseq(',', $.expression)),
      ')'),
    )),

    structExpr: $ => prec.left(seq(
      // $.Identifier, '{', // TODO: Why does upper case not work here?
      $.identifier, '{', 
        $.memberBind, repeatseq(',', $.memberBind), 
      '}'
    )),
    memberBind: $ => prec.left(seq($.identifier, ':', $.expression)),

    rulesExpr: $ => prec.left(seq(
      optional($.attributeInstances), 
      'rules', optseq(':', $.identifier), 
        $.rulesStmt,
      'endrules', optseq(':', $.identifier)
      )),
    rulesStmt: $ => choice(
      $.rule, 
      $.expressionStmt
    ),

    // ================================================================
    // sec 11 Pattern matching

    pattern: $ => choice(
      prec.right(seq('.', $.identifier)),
      '.*',
      $.constantPattern,
      $.taggedUnionPattern,
      $.structPattern,
      $.tuplePattern,
    ),
    constantPattern: $ => choice(
      $.intLiteral, 
      $.realLiteral, 
      $.stringLiteral,
      $.boolLiteral,
      $.Identifier,
    ),
    structPattern: $ => prec.left(seq(
      $.Identifier, '{', optseq($.identifier, ':', $.pattern,
                                repeatseq(',', $.identifier, ':', $.pattern)), '}'
    )),
    fsmStmt: $ => choice(
      // NOTE: We did s/exprFsmStmt/actionStmt. The exprFsmStmt rule 
      //       has an choice of "expression ;", which, for example, 
      //       would require to put a semicolon after an action block.
      $.actionStmt,
      $.seqFsmStmt,
      $.parFsmStmt,
      $.ifFsmStmt,
      $.whileFsmStmt,
      $.repeatFsmStmt,
      $.forFsmStmt,
      $.returnFsmStmt,
    ),

    seqFsmStmt: $ => prec.left(seq(
      'seq', $.fsmStmt, repeat($.fsmStmt), 'endseq'
    )),
    parFsmStmt: $ => prec.left(seq(
      'par', $.fsmStmt, repeat($.fsmStmt), 'endpar'
    )),
    whileFsmStmt: $ => prec.left(seq(
      'while', '(', $.expression, ')', $.loopBodyFsmStmt
    )),
    loopBodyFsmStmt: $ => choice(
      $.fsmStmt, 
      seq('break', ';'),
      seq('continue', ';')
    ),

    // ================================================================
    // sec 13 Important primitives
    // TODO: Not whole spec implemented here

    systemTaskStmt: $ => choice(
      prec.left(seq($.systemTaskCall, ';')),
      // This should laos cover sec 13.8.4 Writing to a file, and other
      prec.left(seq($.displayTaskName, optseq('(', optseq($.expression, 
                                              repeatseq(',', $.expression)), ')'), ';'
      )),
      // $fclose ( fileIdentifier ) ;
      seq('$fclose', '(', $.identifier, ')', ';'),
    ),
    displayTaskName: $ => choice('$display', '$displayb', '$displayo',
      '$displayh', '$write', '$writeb', '$writeo', '$writeh',
      '$format', '$fopen', '$fclose', '$fdisplay',
      '$fdisplayb', '$fdisplayo', '$fdisplayh', '$fwrite',
      '$fwriteb', '$fwriteo', '$fwriteh', '$swrite',
      '$swriteb', '$swriteo', '$swriteh', '$sformat',
      '$swriteAV', '$swritebAV', '$swriteoAV', '$swritehAV',
      '$sformatAV', '$fgetc', '$fungetc', '$fflush',
      '$finish', '$stop', '$dumpvars', '$dumpon', '$dumpoff',
      '$time', '$stime', '$realtobits', '$bitstoreal',
      '$test$plusargs'
    ),
    intLiteral: $ => choice(
      "'0'", 
      "'1", 
      $.sizedIntLiteral, 
      $.unsizedIntLiteral
    ),
    unsizedIntLiteral: $ => choice(
      seq(optional($.sign), $.baseLiteral),
      seq(optional($.sign), $.decNum)
    ),
    baseLiteral: $ => choice(
      seq(choice("'d", "'D"), $.decDigitsUnderscore),
      seq(choice("'h", "'H"), $.hexDigitsUnderscore),
      seq(choice("'o", "'O"), $.octDigitsUnderscore),
      seq(choice("'b", "'B"), $.binDigitsUnderscore),
    ),
