test/corpus/bit_type.txt
==================
bit type
==================

bit onebit;
onebit = 1;

bit [3:0] fourBits;
fourBits = 15;

---

    (sourceFile
      (packageStmt
        (varDecl
          (type
            (typePrimary))
          (varInit
            (lValue
              (identifier)))))
      (packageStmt
        (lValue
          (identifier))
        (rValue
          (expression
            (exprPrimary
              (intLiteral
                (unsizedIntLiteral
                  (decNum
                    (decDigits))))))))
      (packageStmt
        (varDecl
          (type
            (typePrimary
              (typeNat
                (decDigits))))
          (varInit
            (lValue
              (identifier)))))
      (packageStmt
        (lValue
          (identifier))
        (rValue
          (expression
            (exprPrimary
              (intLiteral
                (unsizedIntLiteral
                  (decNum
                    (decDigits)))))))))
