test/corpus/fsm.txt
====================
fsm
====================

module mkCPU_Model();
   FSM fsm <-mkFSM(seq
                    par
                      seq
                        action // Write to accelerator config [4]: addr_A
                          Req_I req = Req {command:WRITE, addr:accel_base_addr + 'h08, data:'h1000, b_size:BITS64, tid:?};
                          f_reqs.enq (req);
                        endaction

                        action // Write to accelerator config [8]: addr_B
                          Req_I req = Req {command:WRITE, addr:accel_base_addr + 'h10, data:'h1800, b_size:BITS64, tid:?};
                          f_reqs.enq (req);
                        endaction

                        action // Write to accelerator config [0xC]: word count
                          Req_I req = Req {command:WRITE, addr:accel_base_addr + 'h18, data:13, b_size:BITS64, tid:?};
                          f_reqs.enq (req);
                        endaction

                        action // Write to accelerator config [0x0]: 'go' command
                          Req_I req = Req {command:WRITE, addr:accel_base_addr + 'h00, data:1, b_size:BITS64, tid:?};
                          f_reqs.enq (req);
                        endaction
                      endseq

                      seq    // Drain write responses from ACCELERATOR
                        f_rsps.deq;
                        f_rsps.deq;
                        f_rsps.deq;
                        f_rsps.deq;
                      endseq
                    endpar

                    // Poll the ACCELERATOR to check for completion
                    rg_accelerator_busy <= True;
                    while (rg_accelerator_busy) seq
                      delay (100);
                      $display ("%0d: CPU: polling accelerator for completion", cur_cycle);
                      action
                        Req_I req = Req {command:READ, addr:accel_base_addr, data:?, b_size:BITS64, tid:?};
                        f_reqs.enq (req);
                      endaction
                      
                      action
                        let rsp = f_rsps.first; f_rsps.deq;
                        Bool busy = (rsp.data != 0);
                        rg_accelerator_busy <= busy;
                        if (! busy) $display ("%0d: CPU: accelerator completed", cur_cycle);
                      endaction
                    endseq

                endseq
              );

endmodule

---

    (sourceFile
      (packageStmt
        (moduleDef
          (moduleProto
            (identifier))
          (moduleStmt
            (varDeclDo
              (type
                (typePrimary
                  (typeIde
                    (identifier))))
              (identifier)
              (rValue
                (expression
                  (exprPrimary
                    (functionCall
                      (exprPrimary
                        (identifier))
                      (expression
                        (exprPrimary
                          (seqFsmStmt
                            (fsmStmt
                              (parFsmStmt
                                (fsmStmt
                                  (seqFsmStmt
                                    (fsmStmt
                                      (actionStmt
                                        (actionBlock
                                          (comment)
                                          (actionStmt
                                            (varDecl
                                              (type
                                                (typePrimary
                                                  (typeIde
                                                    (identifier))))
                                              (varInit
                                                (identifier)
                                                (expression
                                                  (exprPrimary
                                                    (structExpr
                                                      (identifier)
                                                      (memberBind
                                                        (identifier)
                                                        (expression
                                                          (exprPrimary
                                                            (identifier))))
                                                      (memberBind
                                                        (identifier)
                                                        (expression
                                                          (operatorExpr
                                                            (expression
                                                              (exprPrimary
                                                                (identifier)))
                                                            (binop)
                                                            (expression
                                                              (exprPrimary
                                                                (intLiteral
                                                                  (unsizedIntLiteral
                                                                    (baseLiteral
                                                                      (hexDigitsUnderscore)))))))))
                                                      (memberBind
                                                        (identifier)
                                                        (expression
                                                          (exprPrimary
                                                            (intLiteral
                                                              (unsizedIntLiteral
                                                                (baseLiteral
                                                                  (hexDigitsUnderscore)))))))
                                                      (memberBind
                                                        (identifier)
                                                        (expression
                                                          (exprPrimary
                                                            (identifier))))
                                                      (memberBind
                                                        (identifier)
                                                        (expression
                                                          (exprPrimary)))))))))
                                          (actionStmt
                                            (functionCall
                                              (exprPrimary
                                                (methodCall
                                                  (exprPrimary
                                                    (identifier))
                                                  (identifier)))
                                              (expression
                                                (exprPrimary
                                                  (identifier))))))))
                                    (fsmStmt
                                      (actionStmt
                                        (actionBlock
                                          (comment)
                                          (actionStmt
                                            (varDecl
                                              (type
                                                (typePrimary
                                                  (typeIde
                                                    (identifier))))
                                              (varInit
                                                (identifier)
                                                (expression
                                                  (exprPrimary
                                                    (structExpr
                                                      (identifier)
                                                      (memberBind
                                                        (identifier)
                                                        (expression
                                                          (exprPrimary
                                                            (identifier))))
                                                      (memberBind
                                                        (identifier)
                                                        (expression
                                                          (operatorExpr
                                                            (expression
                                                              (exprPrimary
                                                                (identifier)))
                                                            (binop)
                                                            (expression
                                                              (exprPrimary
                                                                (intLiteral
                                                                  (unsizedIntLiteral
                                                                    (baseLiteral
                                                                      (hexDigitsUnderscore)))))))))
                                                      (memberBind
                                                        (identifier)
                                                        (expression
                                                          (exprPrimary
                                                            (intLiteral
                                                              (unsizedIntLiteral
                                                                (baseLiteral
                                                                  (hexDigitsUnderscore)))))))
                                                      (memberBind
                                                        (identifier)
                                                        (expression
                                                          (exprPrimary
                                                            (identifier))))
                                                      (memberBind
                                                        (identifier)
                                                        (expression
                                                          (exprPrimary)))))))))
                                          (actionStmt
                                            (functionCall
                                              (exprPrimary
                                                (methodCall
                                                  (exprPrimary
                                                    (identifier))
                                                  (identifier)))
                                              (expression
                                                (exprPrimary
                                                  (identifier))))))))
                                    (fsmStmt
                                      (actionStmt
                                        (actionBlock
                                          (comment)
                                          (actionStmt
                                            (varDecl
                                              (type
                                                (typePrimary
                                                  (typeIde
                                                    (identifier))))
                                              (varInit
                                                (identifier)
                                                (expression
                                                  (exprPrimary
                                                    (structExpr
                                                      (identifier)
                                                      (memberBind
                                                        (identifier)
                                                        (expression
                                                          (exprPrimary
                                                            (identifier))))
                                                      (memberBind
                                                        (identifier)
                                                        (expression
                                                          (operatorExpr
                                                            (expression
                                                              (exprPrimary
                                                                (identifier)))
                                                            (binop)
                                                            (expression
                                                              (exprPrimary
                                                                (intLiteral
                                                                  (unsizedIntLiteral
                                                                    (baseLiteral
                                                                      (hexDigitsUnderscore)))))))))
                                                      (memberBind
                                                        (identifier)
                                                        (expression
                                                          (exprPrimary
                                                            (intLiteral
                                                              (unsizedIntLiteral
                                                                (decNum
                                                                  (decDigits)))))))
                                                      (memberBind
                                                        (identifier)
                                                        (expression
                                                          (exprPrimary
                                                            (identifier))))
                                                      (memberBind
                                                        (identifier)
                                                        (expression
                                                          (exprPrimary)))))))))
                                          (actionStmt
                                            (functionCall
                                              (exprPrimary
                                                (methodCall
                                                  (exprPrimary
                                                    (identifier))
                                                  (identifier)))
                                              (expression
                                                (exprPrimary
                                                  (identifier))))))))
                                    (fsmStmt
                                      (actionStmt
                                        (actionBlock
                                          (comment)
                                          (actionStmt
                                            (varDecl
                                              (type
                                                (typePrimary
                                                  (typeIde
                                                    (identifier))))
                                              (varInit
                                                (identifier)
                                                (expression
                                                  (exprPrimary
                                                    (structExpr
                                                      (identifier)
                                                      (memberBind
                                                        (identifier)
                                                        (expression
                                                          (exprPrimary
                                                            (identifier))))
                                                      (memberBind
                                                        (identifier)
                                                        (expression
                                                          (operatorExpr
                                                            (expression
                                                              (exprPrimary
                                                                (identifier)))
                                                            (binop)
                                                            (expression
                                                              (exprPrimary
                                                                (intLiteral
                                                                  (unsizedIntLiteral
                                                                    (baseLiteral
                                                                      (hexDigitsUnderscore)))))))))
                                                      (memberBind
                                                        (identifier)
                                                        (expression
                                                          (exprPrimary
                                                            (intLiteral
                                                              (unsizedIntLiteral
                                                                (decNum
                                                                  (decDigits)))))))
                                                      (memberBind
                                                        (identifier)
                                                        (expression
                                                          (exprPrimary
                                                            (identifier))))
                                                      (memberBind
                                                        (identifier)
                                                        (expression
                                                          (exprPrimary)))))))))
                                          (actionStmt
                                            (functionCall
                                              (exprPrimary
                                                (methodCall
                                                  (exprPrimary
                                                    (identifier))
                                                  (identifier)))
                                              (expression
                                                (exprPrimary
                                                  (identifier))))))))))
                                (fsmStmt
                                  (seqFsmStmt
                                    (comment)
                                    (fsmStmt
                                      (actionStmt
                                        (methodCall
                                          (exprPrimary
                                            (identifier))
                                          (identifier))))
                                    (fsmStmt
                                      (actionStmt
                                        (methodCall
                                          (exprPrimary
                                            (identifier))
                                          (identifier))))
                                    (fsmStmt
                                      (actionStmt
                                        (methodCall
                                          (exprPrimary
                                            (identifier))
                                          (identifier))))
                                    (fsmStmt
                                      (actionStmt
                                        (methodCall
                                          (exprPrimary
                                            (identifier))
                                          (identifier))))))))
                            (comment)
                            (fsmStmt
                              (actionStmt
                                (regWrite
                                  (lValue
                                    (identifier))
                                  (rValue
                                    (expression
                                      (exprPrimary
                                        (identifier)))))))
                            (fsmStmt
                              (whileFsmStmt
                                (expression
                                  (exprPrimary
                                    (identifier)))
                                (loopBodyFsmStmt
                                  (fsmStmt
                                    (seqFsmStmt
                                      (fsmStmt
                                        (actionStmt
                                          (functionCall
                                            (exprPrimary
                                              (identifier))
                                            (expression
                                              (exprPrimary
                                                (intLiteral
                                                  (unsizedIntLiteral
                                                    (decNum
                                                      (decDigits)))))))))
                                      (fsmStmt
                                        (actionStmt
                                          (systemTaskStmt
                                            (displayTaskName)
                                            (expression
                                              (exprPrimary
                                                (stringLiteral)))
                                            (expression
                                              (exprPrimary
                                                (identifier))))))
                                      (fsmStmt
                                        (actionStmt
                                          (actionBlock
                                            (actionStmt
                                              (varDecl
                                                (type
                                                  (typePrimary
                                                    (typeIde
                                                      (identifier))))
                                                (varInit
                                                  (identifier)
                                                  (expression
                                                    (exprPrimary
                                                      (structExpr
                                                        (identifier)
                                                        (memberBind
                                                          (identifier)
                                                          (expression
                                                            (exprPrimary
                                                              (identifier))))
                                                        (memberBind
                                                          (identifier)
